docker compose added

--- a/BookStoreClient/src/index.html
+++ b/BookStoreClient/src/index.html
@@ -15,7 +15,8 @@
    <!-- CSS Implementing Plugins -->
    <link rel="stylesheet" href="assets/vendor/font-awesome/css/fontawesome-all.min.css">
    <link rel="stylesheet" href="assets/vendor/flaticon/font/flaticon.css">
-   <link rel="stylesheet" href="assets/vendor/animate.css/animate.css">
+   <link rel="stylesheet"  href="./assets/vendor/animate.css/animate.css">
+
    <link rel="stylesheet" href="assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css"/>
    <link rel="stylesheet" href="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
